[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version="1.4.1"
features=["v4"]


[[bin]]
name="client"
path="src/client/main.rs"

[[bin]]
name ="server"
path="src/server/main.rs"